--- a/02-html4.01/09-challenge tables.html
+++ b/02-html4.01/09-challenge tables.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Challenge Tables</title>
+	<title>Challenge Table</title>
 </head>
 <body>
-	<table> border="1" width="200px
+	<table border="1" width="200px">
 		<tr>
 			<td>X</td>
 			<td colspan="5"></td>
@@ -45,6 +45,6 @@
 			<td>X</td>
 			<td>X</td>
 		</tr>
-			</table>
+	</table>
 </body>
 </html>
