--- a/03-HTML5/06-Svg.html
+++ b/03-HTML5/06-Svg.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA.Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>SVG</title>
 </head>
 <body>
 	<h2>Square</h2>
@@ -12,7 +13,7 @@
 			x="10"
 			y="10"
 			width="150"
-			heigth="150"
+			height="150"
 			stroke="#444"
 			stroke-width="4"
 			fill="#4488aa"
@@ -26,7 +27,7 @@
 			x="10"
 			y="10"
 			width="300"
-			heigth="150"
+			height="150"
 			stroke="#444"
 			stroke-width="4"
 			fill="#4488aa"
@@ -35,12 +36,9 @@
 	</svg>
     <!--  -->
 	<h2>Triangle</h2>
-	<svg width="350" height="200">
+	<svg width="200" height="200">
 		<polygon 
-			x="10"
-			y="10"
-			width="300"
-			heigth="150"
+			points="10, 180 100, 10 190, 180"
 			stroke="#444"
 			stroke-width="4"
 			fill="#4488aa"
@@ -75,15 +73,16 @@
 		y="10" 
 		width="300" 
 		height="150" 
-		stroke="MidnightBlue" stroke-width="4" 
-		fill="LightGreen"
+		stroke="#444" 
+		stroke-width="4" 
+		fill="#4488aa"
 		>
 		</rect>
 		<text 
-		x="64" 
-		y="111" 
-		fill="FireBrick" 
-		font-family="Arial" 
+		x="40" 
+		y="110" 
+		fill="#fff" 
+		font-family="Comic Sans MS" 
 		font-size="80"
 		>
 		ADSI</text>
