--- a/03-HTML5/05-Input.html
+++ b/03-HTML5/05-Input.html
@@ -17,12 +17,12 @@
         <h3>Type Email:</h3>
         <input type="email" placeholder="Email" required>
         <!--  -->
-        <h3>Type Number (1-100:</h3>
-        <input type="number" placeholder="Number Between 1 and 100" required>
+        <h3>Type Number (1-100)</h3>
+        <input type="number" min="1" max="100" required>
         <!--  -->
         <h3>Type Range:</h3>
-        <input type="range" min="1" max="100" step="2" oninput="perc.value=this.value+'&'" required>
-        <output id="prec"></output>
+        <input type="range" min="0" max="100" step="2" oninput="perc.value=this.value+'%'" required>
+        <output id="perc"></output>
         <!--  -->
         <br><br>
         <button> Send Form </button>
