--- a/04-CSS2.1/03-attr-style.html
+++ b/04-CSS2.1/03-attr-style.html
@@ -1,1 +1,23 @@
-03-attr-style
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>CSS in attribute style</title></head>
+<body style="background-color: #6e4a53;">
+	<article 
+		style="
+			background-color: #6e4a53;
+			color: #36262a;
+			font-family: Tahoma;
+			margin: 100px auto;
+			padding: 20px;
+			
+
+			"
+			>
+		
+	</article>
+	
+</body>
+</html>
