--- a/02-html4.01/08-Tables.html
+++ b/02-html4.01/08-Tables.html
@@ -7,18 +7,36 @@
 </head>
 <body>
 	<table border="1">
-		<th>
 			<tr>
 				<th>Fullname</th>
 				<th>Email</th>
 				<th>Username</th>
 			</tr>
-		</th>
 		<tbody>
 			<tr>
 				<td>Jeremias Pringfield</td>
 				<td>jeremias@gmail.com</td>
 				<td>jeremias55</td>
+			</tr>
+			<tr>
+				<td>Homero Simpson</td>
+				<td>homero@gmail.com</td>
+				<td>homero33</td>
+			</tr>
+			<tr>
+				<td>Ned Flanders</td>
+				<td>ned@gmail.com</td>
+				<td>ned88</td>
+			</tr>
+			<tr>
+				<td>Seymour Skinner</td>
+				<td>seymour@gmail.com</td>
+				<td>Seymour</td>
+			</tr>
+			<tr>
+				<td>Apu Nahasapeemapetilon</td>
+				<td>Apu@gmail.com</td>
+				<td>Apu22</td>
 			</tr>
 		</tbody>
 	</table>
