Background/Image/Repeat/Position/Attachment

--- a/04-CSS2.1/52-bg-position.html
+++ b/04-CSS2.1/52-bg-position.html
@@ -6,7 +6,7 @@
 	<title>Background Position</title>
 	<style>
 		section {
-			background-image: url(imgs/);
+			background-image: url(imgs/daria.jpg);
 			border: 2px solid #777;
 			height: 399px;
 			margin: 25px auto;
