--- a/05-CSS3/index.html
+++ b/05-CSS3/index.html
@@ -57,6 +57,7 @@
             <li><a href="16-challenge-responsive.html" target="_blank">16- Challenge Responsive</a></li>  
             <li><a href="17-steps.html" target="_blank">17- Steps</a></li> 
             <li><a href="18-paralax.html" target="_blank">18- Paralax</a></li>
+            <li><a href="19-grids.html" target="_blank">19- Grids</a></li>
 
         </menu>
     </main>
