--- a/05-CSS3/index.html
+++ b/05-CSS3/index.html
@@ -51,14 +51,14 @@
             <li><a href="10-web-fonts.html">10- Web Fonts</a></li>      
             <li><a href="11-variables.html">11- Variables</a></li>
             <li><a href="12-transformations.html">12- Transformations</a></li>  
-            <li><a href="13-transitions.html">13- Transitions</a></li> 
-            <li><a href="14-animations.html">14- Animations</a></li>  
-            <li><a href="15-media-queries.html" target="_blank">15- Media Queries</a></li> 
-            <li><a href="16-challenge-responsive.html" target="_blank">16- Challenge Responsive</a></li>  
-            <li><a href="17-steps.html" target="_blank">17- Steps</a></li> 
-            <li><a href="18-paralax.html" target="_blank">18- Paralax</a></li>
-            <li><a href="19-grids.html" target="_blank">19- Grids</a></li>
-
+            <li><a href="13-transitions.html">13- Transitions</a></li>  
+            <li><a href="14-animations.html">14- Animations</a></li>
+            <li><a href="15-media-queries.html" target="_blank">15- Media Queries</a></li>
+            <li><a href="16-challenge-responsive.html" target="_blank">16- Challenge Responsive</a></li>
+            <li><a href="17-steps.html">17- Steps</a></li>
+            <li><a href="18-parallax.html">18- Parallax</a></li>
+            <li><a href="19-flexbox.html">19- FlexBox</a></li>
+            <li><a href="20-grids.html" target="_blank">20- Grids</a></li>
         </menu>
     </main>
 </body>
