--- a/08-jvascript/02-coments.html
+++ b/08-jvascript/02-coments.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Coments</title>
-	<link rel="stylesheet" href="css/styles.css">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Comments JS</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<main>
-		<header>
-			<h1><span><a href="index.html">&larr;</a></span> Write JS</h1>
-		</header>
-		<section>
-			<h2 id="msj">Default Message</h2>
-		</section>
-	</main>
+    <main>
+        <header>
+            <h1> <span><a href="index.html">&larr;</a></span> Comments JS</h1>
+        </header>
+        <section>
+            <h2 id="date">New Date</h2>
+        </section>
+    </main>
 
-	<script>
+    <script>
         // This is a one line commentary 
         var date = document.getElementById('date');
         /* 
@@ -28,5 +28,6 @@
         let today = new Date(); 
         date.innerHTML = "<mark style='background-color: aqua'>" + today + "</mark>";
     </script>
+
 </body>
-</html>
+</html> 
