--- a/08-jvascript/index.html
+++ b/08-jvascript/index.html
@@ -18,6 +18,10 @@
 				<li><a href="02-coments.html">02- Coments</a></li>
 				<li><a href="03-get-elemets.html">03- Get Elements</a></li>
 				<li><a href="04-variables.html">04- Variables</a></li>
+				<li><a href="05-mthods-object.html">05- Object Methods</a></li>
+				<li><a href="06-types-objects.html">06- Objects Type JS</a></li>
+				<li><a href="07-oject-vehicle.html">07- Oject Vehicle</a></li>
+				<li><a href="08-functions.html">08- Functions</a></li>
 			</nav>
 		</section>
 	</main>
